message ErrorGPB
{
    required string error_text = 1;
    required int32  error_code = 2;
}
